--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name="conin"
 version="1.0"
-dependencies = ["pyomo", "munch", "numpy", "pytest", "black", "glpk", "pytest-cov"]
+dependencies = ["pyomo", "munch", "numpy", "pytest", "black", "glpk", "pytest-cov", "pandas"]
 readme = {file = "README.md", content-type = "text/plain"}
 description="Clio supports constrained analysis and learning for stochastic models with latent variables"
 classifiers=[
